--- a/index.html
+++ b/index.html
@@ -19,22 +19,17 @@
             #original-query-editor {
                 display: none;
             }
-
-            #result-preview {
-                width: 100%;
-                height: 600px;
-                border: 0;
-            }
         </style>
     </head>
     <body>
         <div class="pure-g-r">
             <div class="pure-u-1">
-                <form action="" method="GET" class="pure-form pure-u-1">
-                    <fieldset class="pure-group">
+                <form action="" method="GET" class="pure-form">
+                    <fieldset>
                         <legend>Solr query formatter</legend>
+
                         <div class="pure-u-1">
-                            <textarea name="raw-query" id="raw-query" class="pure-input-1" placeholder="Veuillez saisir la requ&ecirc;te &aacute; formater..." required autofocus></textarea>
+                            <textarea name="raw-query" id="raw-query" class="pure-input-1" placeholder="Veuillez saisir la requ&ecirc;te &aacute; formater." required autofocus></textarea>
                         </div>
 
                         <div class="pure-u-1">
@@ -42,12 +37,14 @@
                         </div>
                     </fieldset>
                 </form>
+            </div>
 
+            <div class="pure-u-1">
                 <form action="" method="GET" class="pure-form">
-                    <fieldset>
+                    <fieldset class="pure-u-1">
                         <legend>Query editor</legend>
 
-                        <div class="pure-g">
+                        <div class="pure-u-1">
                             <div class="pure-u-1-5">
                                 <select id="server-host" class="pure-input-1">
                                     <option value="velo1solx01.virtual-expo.com">velo1solx01.virtual-expo.com</option>
@@ -69,12 +66,12 @@
 
                             <div class="pure-u-1-8">
                                 <select id="result-format" class="pure-input-1">
-                                    <option value="xml">xml</option>
                                     <option value="json" selected>json</option>
+                                    <option value="xml">xml</option>
                                 </select>
                             </div>
 
-                            <div class="pure-u-1-4">
+                            <div class="pure-u-1-6">
                                 <label for="debug-query" class="pure-checkbox">
                                     <input type="checkbox" id="debug-query" checked>
                                     debug
@@ -83,9 +80,9 @@
                         </div>
                     </fieldset>
 
-                    <fieldset class="pure-group">
+                    <fieldset class="pure-u-1">
                         <div class="pure-u-1">
-                            <textarea name="query-editor" id="query-editor" class="pure-input-1" required></textarea>
+                            <textarea name="query-editor" id="query-editor" class="pure-input-1" placeholder="Veuillez saisir la requ&ecirc;te &aacute; formater, ou utiliser le formateur ci-dessus." required></textarea>
                             <textarea name="original-query-editor" id="original-query-editor"></textarea>
                         </div>
 
@@ -139,7 +136,7 @@
                     var port = $('#server-port').val();
                     var url = jQuery.trim($('#query-editor').val());
                     var debug = $('#debug-query').prop('checked');
-                    var format = $('#format-result').val();
+                    var format = $('#result-format').val();
 
                     url += '&wt=' + format;
 
