Amélioration de l'utilisation de la grille Purecss

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="pure-g-r">
             <div class="pure-u-1">
                 <form action="" method="GET" class="pure-form">
-                    <fieldset>
+                    <fieldset class="pure-u-1">
                         <legend>Solr query formatter</legend>
 
                         <div class="pure-u-1">
