--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Solr tools</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
         <!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">-->
         <link rel="stylesheet" href="bower_components/purecss/build/pure-min.css">
@@ -12,10 +19,14 @@
             }
 
             #raw-query {
-                height: 100px;
+                height: 4em;
+                resize: vertical;
+                margin-bottom: 1em;
             }
             #query-editor {
-                height: 400px;
+                height: 30em;
+                resize: vertical;
+                margin-bottom: 1em;
             }
             #original-query-editor {
                 display: none;
@@ -126,9 +137,9 @@
                         queryResult = decodeURIComponent(queryResult);
                         queryResult = queryResult.replace(/&version=2/, '');
                         queryResult = queryResult.replace(/&wt=javabin/, '');
-                        queryResult = queryResult.replace(/select\/\?/, 'select/' + eol + '?');
-                        queryResult = queryResult.replace(/select\?/, 'select/' + eol + '?');
+                        queryResult = queryResult.replace(/\?/, eol + '?');
                         queryResult = queryResult.replace(/&/g, eol + '&');
+                        queryResult = queryResult.replace(/\\n/g, eol);
 
                         queryResult = queryResult.replace(/(https?:\/\/(.*):\d{4})/, '');
 
