Change directory structure

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="statics/images/favicon.ico">
-        <link rel="apple-touch-icon" href="statics/images/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="statics/images/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="statics/images/apple-touch-icon-114x114.png">
+        <link rel="shortcut icon" href="./app/statics/images/favicon.ico">
+        <link rel="apple-touch-icon" href="./app/statics/images/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./app/statics/images/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./app/statics/images/apple-touch-icon-114x114.png">
 
         <!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">-->
-        <link rel="stylesheet" href="bower_components/purecss/build/pure-min.css">
-        <link rel="stylesheet" href="statics/css/main.css">
+        <link rel="stylesheet" href="./app/vendor/purecss/build/pure-min.css">
+        <link rel="stylesheet" href="./app/statics/css/main.css">
     </head>
     <body>
         <div class="pure-g-r">
@@ -103,7 +103,7 @@
 
 
         <!--<script src="http://code.jquery.com/jquery-2.0.3.js"></script>-->
-        <script src="./bower_components/jquery/jquery.js"></script>
-        <script src="./statics/js/main.js"></script>
+        <script src="./app/vendor/jquery/jquery.js"></script>
+        <script src="./app/statics/js/main.js"></script>
     </body>
 </html>
