--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@
         <!--<script src="http://code.jquery.com/jquery-2.0.3.js"></script>-->
         <script src="./app/vendor/jquery/jquery.js"></script>
         <script src="./app/vendor/soma.js/build/soma.js"></script>
-        <!--<script src="./app/statics/js/main.js"></script>-->
-        <script src="./app/statics/js/application.js"></script>
-        <script src="./app/statics/js/application.js"></script>
+        <script src="./app/statics/js/main.js"></script>
     </body>
 </html>
