Finalize debug result UI

--- a/index.html
+++ b/index.html
@@ -83,13 +83,21 @@
                             <div class="pure-u-1">
                                 <button type="submit" id="run-query" class="pure-button pure-input-1 pure-button-primary">run</button>
                             </div>
+                            <div class="pure-u-1">
+                                <button type="submit" id="show-debug-result" class="pure-button pure-input-1">debug</button>
+                            </div>
                         </div>
                     </fieldset>
                 </form>
             </div>
+
+            <div class="pure-u-1">
+                <div class="pure-u-1" id="debug-result"></div>
+            </div>
         </div>
 
         <script src="./app/vendor/jquery/jquery.js"></script>
+        <script src="./app/vendor/jquery-scrollspy/jquery-scrollspy.js"></script>
         <script src="./app/statics/js/main.js"></script>
     </body>
 </html>
