--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                                     <option value="veso2solx01.virtual-expo.com">veso2solx01.virtual-expo.com</option>
                                     <option value="veso3solx03.virtual-expo.com">veso3solx03.virtual-expo.com</option>
                                     <option value="veso3solx04.virtual-expo.com">veso3solx04.virtual-expo.com</option>
+                                    <option value="localhost">localhost</option>
                                 </select>
                             </div>
 
@@ -54,6 +55,7 @@
                                     <option value="8081" selected>8081 - NE</option>
                                     <option value="8082">8082 - DI</option>
                                     <option value="8083">8083 - ME</option>
+                                    <option value="8983">8983 - local</option>
                                 </select>
                             </div>
 
